<?xml version="1.0" encoding="UTF-8"?>
<!--

    Copyright (c) 2018-present Sonatype, Inc. All rights reserved.

    This program is licensed to you under the Apache License Version 2.0,
    and you may not use this file except in compliance with the Apache License Version 2.0.
    You may obtain a copy of the Apache License Version 2.0 at http://www.apache.org/licenses/LICENSE-2.0.

    Unless required by applicable law or agreed to in writing,
    software distributed under the Apache License Version 2.0 is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the Apache License Version 2.0 for the specific language governing permissions and limitations there under.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonatype.buildsupport</groupId>
    <artifactId>public-parent</artifactId>
    <version>27</version>
    <relativePath/>
  </parent>

  <groupId>org.sonatype.goodies.dropwizard</groupId>
  <artifactId>dropwizard-support</artifactId>
  <name>${project.groupId}:${project.artifactId}</name>
  <packaging>pom</packaging>

  <version>2.0.0-SNAPSHOT</version>

  <url>https://sonatype.github.io/dropwizard-support</url>

  <scm>
    <connection>scm:git:git://github.com/sonatype/dropwizard-support.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/sonatype/dropwizard-support.git</developerConnection>
    <url>https://github.com/sonatype/dropwizard-support</url>
  </scm>

  <inceptionYear>2018</inceptionYear>

  <licenses>
    <license>
      <name>ASL2</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <issueManagement>
    <system>github</system>
    <url>https://github.com/sonatype/dropwizard-support/issues</url>
  </issueManagement>

  <ciManagement>
    <system>jenkins</system>
    <url>https://jenkins.ci.sonatype.dev/job/goodies/job/dropwizard-support</url>
  </ciManagement>

  <distributionManagement>
    <site>
      <id>sonatype-ghpages</id>
      <url>scm:git:ssh://git@github.com/sonatype/dropwizard-support.git</url>
    </site>
  </distributionManagement>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>

    <dionysus.version>1.0.3</dionysus.version>
  </properties>

  <modules>
    <module>bom</module>
    <module>testbase</module>
    <module>core</module>
    <module>assets</module>
    <module>client</module>
    <module>views</module>
    <module>shiro</module>
    <module>events</module>
    <module>hibernate</module>
    <module>jdbi</module>
    <module>ratelimit</module>
    <module>rules</module>
    <module>datadog</module>
    <module>swagger</module>
    <module>swagger2</module>
    <module>aws</module>
    <module>camel</module>
    <module>worker</module>
    <module>testsupport</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jxr-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>

        <plugin>
          <groupId>org.sonatype.goodies.dionysus</groupId>
          <artifactId>dionysus-maven-plugin</artifactId>
          <version>${dionysus.version}</version>
          <configuration>
            <theme>
              <groupId>org.sonatype.goodies.dionysus</groupId>
              <artifactId>dionysus-hugo-theme</artifactId>
              <version>${dionysus.version}</version>
            </theme>
            <mavenGoals>
              <goal>javadoc:aggregate</goal>
              <goal>jxr:aggregate</goal>
            </mavenGoals>
            <generators>
              <mavenLicenses/>
              <mavenModules/>
              <mavenPom/>
            </generators>
          </configuration>
        </plugin>

        <plugin>
          <groupId>com.mycila</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <configuration>
            <includes combine.children="append">
              <include>**/*.ftl</include>
            </includes>
            <excludes combine.children="append">
              <exclude>src/site/hugo/**</exclude>
            </excludes>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.codehaus.gmaven</groupId>
          <artifactId>groovy-maven-plugin</artifactId>
          <version>2.1.1</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <executions>
          <execution>
            <id>enforce</id>
            <phase>validate</phase>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>[3.6,)</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>[11,)</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
            <configuration>
              <buildNumberPropertyName>build.tag</buildNumberPropertyName>
              <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <dependencies>
          <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-eclipse-compiler</artifactId>
            <version>3.7.0</version>
          </dependency>
          <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-eclipse-batch</artifactId>
            <version>3.0.7-03</version>
          </dependency>
        </dependencies>
        <configuration>
          <!-- see: https://github.com/groovy/groovy-eclipse/wiki/Groovy-Eclipse-Maven-plugin -->
          <compilerId>groovy-eclipse-compiler</compilerId>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.eclipse.sisu</groupId>
        <artifactId>sisu-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>main-index</goal>
              <goal>test-index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>com.sonatype.clm</groupId>
        <artifactId>clm-maven-plugin</artifactId>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>index</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>it</id>
      <activation>
        <property>
          <name>it</name>
          <value>true</value>
        </property>
      </activation>

      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-failsafe-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>integration-test</goal>
                  <goal>verify</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>dionysus</id>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-enforcer-plugin</artifactId>
              <configuration>
                <!-- site generation causes problems with project dependency resolution? -->
                <skip>true</skip>
              </configuration>
            </plugin>
          </plugins>
        </pluginManagement>
      </build>
    </profile>
  </profiles>

</project>
